Exercise 2 - Basic kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-web
  namespace: workshop
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.5
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-config
          configMap:
            name: workshop-config
